# cipher-bt

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  tests.yaml
cipher/: __init__.py  cli.py  container.py  engine.py  settings.py  strategy.py  system.py  trader.py  utils.py
cipher/cli/: __init__.py  create.py  new.py
cipher/factories/: __init__.py  datas.py  stats.py  trade.py
cipher/models/: __init__.py  commission.py  cursor.py  datas.py  direction.py  events.py  interval.py  log_level.py  meta.py  output.py  position.py  session.py  sessions.py  stats.py  template.py  tick.py  time.py  time_delta.py  trade.py  trades.py  transaction.py  transactions.py  wallet.py
cipher/plotters/: __init__.py  base.py  finplot.py  mplfinance.py
cipher/proxies/: __init__.py  session.py
cipher/resources/: __init__.py  logging.py
cipher/services/: __init__.py  data.py
cipher/sources/: __init__.py  base.py  binance_futures_ohlc.py  binance_spot_ohlc.py  csv_file.py  gateio_spot_ohlc.py  yahoo_finance_ohlc.py
cipher/templates/: env.j2  readme.j2
cipher/templates/strategies/: default.j2
cipher/use_cases/: __init__.py  create_repository.py  create_strategy.py  init_repository.py
cipher/utils/: __init__.py  colors.py  environment.py  rate_limit.py
cipher/values/: __init__.py  base.py  percent.py  quote.py
cipher/wrappers/: __init__.py  datas.py  sessions.py  strategy.py
docs/: components.md  concepts.md  faq.md  index.md  installation.md  tutorial.md
docs/examples/: cmc.md  cmc_all.md  harmonic.md  index.md  liquidations.md  supertrend.md  vumanchu_cipher_b.md  vwap_gold.md
docs/examples/data/: 131_dash.csv
docs/getting-started/: index.md  install-locally.md
strategies/data/: 131_dash.csv
tests/: __init__.py  conftest.py
tests/data/: df.csv
tests/data/sources_cache/fake_ohlc/btcusdt_1h/: 1576800000_1578596400.csv  1576800000_1578596400_c.csv
tests/factories/: test_datas.py  test_stats.py
tests/fixtures/: __init__.py  df.py  output.py
tests/models/: test_base_session.py  test_commission.py  test_cursor.py  test_datas.py  test_interval.py  test_meta.py  test_position.py  test_session.py  test_sessions.py  test_template.py  test_time.py  test_time_delta.py  test_transaction.py  test_wallet.py
tests/plotters/: test_base.py
tests/proxies/: test_session.py
tests/services/: test_data.py
tests/sources/: test_binance_futures_ohlc.py  test_binance_spot_ohlc.py  test_csv_file.py  test_gateio_spot_ohlc.py  test_yahoo_finance_ohlc.py
tests/strategy/: test_signal_handlers.py
tests/system/: test_cipher.py
tests/trader/: test_df_cleanup.py  test_extract_signals.py  test_strategy_title.py
tests/use_cases/: test_create_strategy.py
tests/utils/: test_float_to_decimal.py  test_rate_limiter.py  test_to_decimal.py
