[tool.poetry]
name = "cipher-bt"
version = "0.3.6"
description = "Cipher, a backtesting framework."
authors = ["Oleksandr Polieno <oleksandr@nanvel.com>"]
readme = "README.md"
keywords = ["backtest", "quant", "trading", "crypto", "framework", "colab", "strategy"]
packages = [{include = "cipher"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
typer = "^0.7.0"
pandas-ta = "^0.3.14b0"
ujson = "^5.6.0"
requests = "^2.28.1"
mplfinance = {version = "^0.12.9b7", optional = true}
dependency-injector = "^4.41.0"
tabulate = "^0.9.0"
finplot = {version = "^1.9.0", optional = true}
jupyterlab = {version = "^3.5.2", optional = true}
jinja2 = "^3.1.2"
yfinance = {version = "^0.2.3", optional = true}

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}
pytest = "^7.2.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.7"

[tool.poetry.extras]
finplot = ["finplot"]
mplfinance = ["mplfinance"]
jupyter = ["jupyterlab", "mplfinance"]
yfinance = ["yfinance"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cipher = "cipher.cli:app"
