[project]
name = "cipher-bt"
version = "0.6.2"
description = "Cipher, a backtesting framework."
authors = [{ name = "Oleksandr Polieno", email = "oleksandr@nanvel.com" }]
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "backtest",
    "quant",
    "trading",
    "crypto",
    "framework",
    "colab",
    "strategy",
]
dependencies = [
    "dependency-injector>=4.46.0",
    "jinja2>=3.1.6",
    "mplfinance>=0.12.10b0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "typer>=0.15.4",
    "ujson>=5.10.0",
]

[project.optional-dependencies]
finplot = ["finplot>=1.9.0,<2"]
jupyter = [
    "jupyterlab>=3.5.2,<4",
]
yfinance = ["yfinance>=0.2.3,<0.3"]
talib = ["TA-Lib>=0.6.4"]

[project.urls]
Homepage = "https://cipher.nanvel.com/"
Repository = "https://github.com/nanvel/cipher-bt"

[project.scripts]
cipher = "cipher.cli:app"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mypy>=1.17.1",
    "pytest>=8.3.5",
    "ruff>=0.12.7",
    "twine>=6.1.0",
]

[tool.hatch.build.targets.sdist]
include = ["cipher"]

[tool.hatch.build.targets.wheel]
include = ["cipher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
